--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/core": "^3.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "styled-components": "^4.2.0"
   }
 }
