--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
+    "react-select": "^2.4.3",
     "redux": "^4.0.1",
     "styled-components": "^4.2.0"
   }
