--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-select": "^2.4.3",
+    "react-spring": "^8.0.20",
     "redux": "^4.0.1",
     "styled-components": "^4.2.0"
   }
