--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "webpack-dev-server src/index.js --mode development --config webpack.dev.js",
     "build": "webpack --mode production --config webpack.prod.js",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
