--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.7.1",
+    "@material-ui/icons": "^4.5.1",
     "gh-pages": "^2.1.1",
     "lodash.debounce": "^4.0.8",
     "react": "^16.12.0",
